# fastwoe

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  FAISS_TROUBLESHOOTING.md  Makefile  README.md  pyproject.toml  requirements.txt  ty.toml
.cursor/rules/: python.mdc
.github/workflows/: ci.yml  compatibility.yml  release.yml  test-release.yml  typecheck.yml
docs/: marginal_somersd_guide.md  multiclass_woe_guide.md  piecewise_woe_guide.md  somersd_ase.md  woe_st_errors.md  woe_standard_errors.md
docs/dev/: README.md  act-local-testing.md  ci-type-checking.md  faiss-setup.md  type-checking.md
examples/: fastwoe_cap_curve.ipynb  fastwoe_example.py  fastwoe_explanation.ipynb  fastwoe_faiss_kmeans.py  fastwoe_monotonic.ipynb  fastwoe_monotonic.py  fastwoe_multiclass.ipynb  fastwoe_multiclass.py  fastwoe_shapley.py  fastwoe_styled_display.ipynb  fastwoe_tree.py  fastwoe_visualize_woe.ipynb  miv_feature_selection.ipynb  msd_feature_selection.ipynb  woe_density.py  woe_standard_errors.ipynb
examples/notebooks/: fastwoe_cap_curve.ipynb  fastwoe_finetuning.ipynb  fastwoe_gini_contributions.ipynb  fastwoe_monotonic.ipynb  fastwoe_multiclass.ipynb  fastwoe_piecewise.ipynb  woe_standard_errors.ipynb
examples/scripts/: fastwoe_example.py  fastwoe_faiss_kmeans.py  iv_standard_errors.py
fastwoe/: __init__.py  display.py  fast_somersd.py  fastwoe.py  fastwoe_multiclass.py  fastwoe_piecewise.py  interpret_fastwoe.py  logging_config.py  metrics.py  modeling.py  plots.py  screening.py
tests/: __init__.py  conftest.py  test_compatibility.py  test_fast_somersd.py  test_fastwoe.py  test_interpret_fastwoe.py  test_metrics.py  test_modeling.py  test_screening.py
